[B]Version 1.1.76[/B]
Freeomovie Category directory fix
Hanime.tv - Also play the mp4 videos (needs a free member account)
awmnetwork - 35 new sites
JustFullPorn - new sites
