@@ -25,39 +25,39 @@ from resources.lib.adultsite import AdultSite
 site = AdultSite('awmnet', '[COLOR hotpink]AWM Network[/COLOR] - [COLOR deeppink]35 sites[/COLOR]', '', 'awmnet.jpg', 'awmnet')
 
 sitelist = [['Anal Galore', 'https://www.analgalore.com/templates/analgalore/images/logo.png', 'https://www.analgalore.com/'],
-            ['Asian Galore', 'https://www.asiangalore.com/templates/asiangalore/images/logo.png', 'https://www.asiangalore.com/'], 
-            ["Ass'O'Ass", 'https://www.assoass.com/templates/assoass/images/logo-8.png', 'https://www.assoass.com/'], 
-            ['Cartoon Porn Videos', 'https://www.cartoonpornvideos.com/templates/cartoonpornvideos/images/logo.png', 'https://www.cartoonpornvideos.com/'], 
-            ['Dino Tube', 'https://www.dinotube.com/templates/dinotube/images/logo.png', 'https://www.dinotube.com/'], 
-            ['Ebony Galore', 'https://www.ebonygalore.com/templates/ebonygalore/images/logo-8.png', 'https://www.ebonygalore.com/'], 
-            ['EL Ladies', 'https://www.el-ladies.com/templates/el-ladies/images/logo.png', 'https://www.el-ladies.com/'], 
-            ['For Her Tube', 'https://www.forhertube.com/templates/forhertube/images/logo.png', 'https://www.forhertube.com/'], 
-            ['Fucd', 'https://www.fucd.com/templates/fucd/images/logo.png', 'https://www.fucd.com/'], 
-            ['Fuq', 'https://www.fuq.com/templates/fuq/images/logo-8.png', 'https://www.fuq.com/'], 
-            ['GayMale Tube', 'https://www.gaymaletube.com/templates/gaymaletube/images/logo.png', 'https://www.gaymaletube.com/'], 
-            ['Got Porn', 'https://www.gotporn.com/templates/gotporn/images/logo.png', 'https://www.gotporn.com/'], 
-            ['Homemade Galore', 'https://www.homemadegalore.com/templates/homemadegalore/images/logo.png', 'https://www.homemadegalore.com/'], 
-            ['iXXX', 'https://www.ixxx.com/templates/ixxx/images/logo.png', 'https://www.ixxx.com/'], 
-            ['Latin Galore', 'https://www.latingalore.com/templates/latingalore/images/logo.png', 'https://www.latingalore.com/'], 
-            ['Lesbian Porn Videos', 'https://www.lesbianpornvideos.com/templates/lesbianpornvideos/images/logo.png', 'https://www.lesbianpornvideos.com/'], 
-            ['Lobster Tube', 'https://www.lobstertube.com/templates/lobstertube/images/logo.png', 'https://www.lobstertube.com/'], 
-            ['Lupo Porno', 'https://www.lupoporno.com/templates/lupoporno/images/logo.png', 'https://www.lupoporno.com/'], 
-            ['Mature Tube', 'https://www.maturetube.com/templates/maturetube/images/logo.png', 'https://www.maturetube.com/'], 
-            ['Melons Tube', 'https://www.melonstube.com/templates/melonstube/images/logo.png', 'https://www.melonstube.com/'], 
-            ['Meta Porn', 'https://www.metaporn.com/templates/metaporn/images/logo.png', 'https://www.metaporn.com/'], 
-            ['Porn HD', 'https://www.pornhd.com/templates/pornhd/images/logo.png', 'https://www.pornhd.com/'], 
-            ['Porn TV', 'https://www.porntv.com/templates/porntv/images/logo.png', 'https://www.porntv.com/'], 
-            ['Porzo', 'https://www.porzo.com/templates/porzo/images/logo.png', 'https://www.porzo.com/'], 
-            ['Qorno', 'https://www.qorno.com/templates/qorno/images/logo.png', 'https://www.qorno.com/'], 
-            ['Samba Porno', 'https://www.sambaporno.com/templates/sambaporno/images/logo.png', 'https://www.sambaporno.com/'], 
-            ['Stocking Tease', 'https://www.stocking-tease.com/templates/stocking-tease/images/logo-8.png', 'https://www.stocking-tease.com/'], 
-            ['TG Tube', 'https://www.tgtube.com/templates/tgtube/images/logo.png', 'https://www.tgtube.com/'], 
-            ['Tiava', 'https://www.tiava.com/templates/tiava/images/logo.png', 'https://www.tiava.com/'], 
-            ['Toro Porno', 'https://www.toroporno.com/templates/toroporno/images/logo.png', 'https://www.toroporno.com/'], 
+            ['Asian Galore', 'https://www.asiangalore.com/templates/asiangalore/images/logo.png', 'https://www.asiangalore.com/'],
+            ["Ass'O'Ass", 'https://www.assoass.com/templates/assoass/images/logo-8.png', 'https://www.assoass.com/'],
+            ['Cartoon Porn Videos', 'https://www.cartoonpornvideos.com/templates/cartoonpornvideos/images/logo.png', 'https://www.cartoonpornvideos.com/'],
+            ['Dino Tube', 'https://www.dinotube.com/templates/dinotube/images/logo.png', 'https://www.dinotube.com/'],
+            ['Ebony Galore', 'https://www.ebonygalore.com/templates/ebonygalore/images/logo-8.png', 'https://www.ebonygalore.com/'],
+            ['EL Ladies', 'https://www.el-ladies.com/templates/el-ladies/images/logo.png', 'https://www.el-ladies.com/'],
+            ['For Her Tube', 'https://www.forhertube.com/templates/forhertube/images/logo.png', 'https://www.forhertube.com/'],
+            ['Fucd', 'https://www.fucd.com/templates/fucd/images/logo.png', 'https://www.fucd.com/'],
+            ['Fuq', 'https://www.fuq.com/templates/fuq/images/logo-8.png', 'https://www.fuq.com/'],
+            ['GayMale Tube', 'https://www.gaymaletube.com/templates/gaymaletube/images/logo.png', 'https://www.gaymaletube.com/'],
+            ['Got Porn', 'https://www.gotporn.com/templates/gotporn/images/logo.png', 'https://www.gotporn.com/'],
+            ['Homemade Galore', 'https://www.homemadegalore.com/templates/homemadegalore/images/logo.png', 'https://www.homemadegalore.com/'],
+            ['iXXX', 'https://www.ixxx.com/templates/ixxx/images/logo.png', 'https://www.ixxx.com/'],
+            ['Latin Galore', 'https://www.latingalore.com/templates/latingalore/images/logo.png', 'https://www.latingalore.com/'],
+            ['Lesbian Porn Videos', 'https://www.lesbianpornvideos.com/templates/lesbianpornvideos/images/logo.png', 'https://www.lesbianpornvideos.com/'],
+            ['Lobster Tube', 'https://www.lobstertube.com/templates/lobstertube/images/logo.png', 'https://www.lobstertube.com/'],
+            ['Lupo Porno', 'https://www.lupoporno.com/templates/lupoporno/images/logo.png', 'https://www.lupoporno.com/'],
+            ['Mature Tube', 'https://www.maturetube.com/templates/maturetube/images/logo.png', 'https://www.maturetube.com/'],
+            ['Melons Tube', 'https://www.melonstube.com/templates/melonstube/images/logo.png', 'https://www.melonstube.com/'],
+            ['Meta Porn', 'https://www.metaporn.com/templates/metaporn/images/logo.png', 'https://www.metaporn.com/'],
+            ['Porn HD', 'https://www.pornhd.com/templates/pornhd/images/logo.png', 'https://www.pornhd.com/'],
+            ['Porn TV', 'https://www.porntv.com/templates/porntv/images/logo.png', 'https://www.porntv.com/'],
+            ['Porzo', 'https://www.porzo.com/templates/porzo/images/logo.png', 'https://www.porzo.com/'],
+            ['Qorno', 'https://www.qorno.com/templates/qorno/images/logo.png', 'https://www.qorno.com/'],
+            ['Samba Porno', 'https://www.sambaporno.com/templates/sambaporno/images/logo.png', 'https://www.sambaporno.com/'],
+            ['Stocking Tease', 'https://www.stocking-tease.com/templates/stocking-tease/images/logo-8.png', 'https://www.stocking-tease.com/'],
+            ['TG Tube', 'https://www.tgtube.com/templates/tgtube/images/logo.png', 'https://www.tgtube.com/'],
+            ['Tiava', 'https://www.tiava.com/templates/tiava/images/logo.png', 'https://www.tiava.com/'],
+            ['Toro Porno', 'https://www.toroporno.com/templates/toroporno/images/logo.png', 'https://www.toroporno.com/'],
             ['Tube BDSM', 'https://www.tubebdsm.com/templates/tubebdsm/images/logo-8.png', 'https://www.tubebdsm.com/'],
-            ['Tube Galore', 'https://www.tubegalore.com/templates/tubegalore/images/logo.png', 'https://www.tubegalore.com/'], 
-            ['Tube Porn', 'https://www.tubeporn.com/templates/tubeporn/images/logo.png', 'https://www.tubeporn.com/'], 
-            ['Tube Pornstars', 'https://www.tubepornstars.com/templates/tubepornstars/images/logo.png', 'https://www.tubepornstars.com/'], 
+            ['Tube Galore', 'https://www.tubegalore.com/templates/tubegalore/images/logo.png', 'https://www.tubegalore.com/'],
+            ['Tube Porn', 'https://www.tubeporn.com/templates/tubeporn/images/logo.png', 'https://www.tubeporn.com/'],
+            ['Tube Pornstars', 'https://www.tubepornstars.com/templates/tubepornstars/images/logo.png', 'https://www.tubepornstars.com/'],
             ['VR XXX', 'https://www.vrxxx.com/templates/vrxxx/images/logo.png', 'https://www.vrxxx.com/']]
 
 
@@ -154,6 +154,7 @@ def Playvid(url, name, download=None):
         else:
             found = True
     vp.progress.update(50, "[CR]Scraping video page[CR]")
+    utils.kodilog(vlink)
     if not vp.resolveurl.HostedMediaFile(vlink):
         utils.notify('Oh Oh', 'No Videos found')
         vp.progress.close()
