@@ -3,4 +3,6 @@ Freeomovie Category directory fix
 Hanime.tv - Also play the mp4 videos (needs a free member account)
 awmnetwork - 35 new sites
 JustFullPorn - new sites
-
+JavHoho - fix listing
+Blendporn - fix pagination
+YrPrno - fix pagination
